# RedoxiTrack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.vscode-examples/: launch.json  settings.json  tasks.json
cmake/: RedoxiTrackConfig.cmake.in  redoxi-track-fetch-common.cmake  redoxi-track-fetch-igcclib.cmake  redoxi-track-fetch-opencv.cmake
examples/: CMakeLists.txt  simple_track.cpp  track_persons.cpp
examples/include/: example_common.h  example_person_detector.h  example_yunet.h  opencv_demo_person_det.h  opencv_demo_yolox.h
examples/src/: example_common.cpp  example_person_detector.cpp  opencv_demo_person_det.cpp  opencv_demo_yolox.cpp
include/RedoxiTrack/: RedoxiTrack.h  RedoxiTrackConfig.h
include/RedoxiTrack/detection/: BotsortTrackTarget.h  DeepSortTrackTarget.h  Detection.h  IDObject.h  KalmanTrackTarget.h  PersonDetection.h  SimpleSortTrackTarget.h  SingleDetection.h  TrackTarget.h
include/RedoxiTrack/nnie/: NNIEOpticalFlow.h
include/RedoxiTrack/tracker/: BotsortKalmanTracker.h  BotsortMotionPrediction.h  BotsortTracker.h  BotsortTrackerParam.h  DeepSortMotionPrediction.h  DeepSortTracker.h  DeepSortTrackerParam.h  DetectionTraits.h  KalmanTracker.h  MotionPredictionByImageKeypoint.h  MotionPredictionByKalman.h  OpencvOpticalFlow.h  OpticalFlowMotionPrediction.h  OpticalFlowTracker.h  OpticalTrackerParam.h  SimpleSortMotionPrediction.h  SimpleSortTracker.h  SimpleSortTrackerParam.h  SortMotionPrediction.h  TrackerBase.h  TrackerParam.h  TrackingDecision.h  TrackingEventHandler.h
include/RedoxiTrack/utils/: CosineFeature.h  FeatureTraits.h  softnms.h  utility_functions.h
src/: CMakeLists.txt
src/detection/: BotsortTrackTarget.cpp  DeepSortTrackTarget.cpp  KalmanTrackTarget.cpp  PersonDetection.cpp  SimpleSortTrackTarget.cpp  SingleDetection.cpp  TrackTarget.cpp
src/nnie/: NNIEOpticalFlow.cpp
src/tracker/: BotsortKalmanTracker.cpp  BotsortMotionPrediction.cpp  BotsortTracker.cpp  BotsortTrackerParam.cpp  DeepSortMotionPrediction.cpp  DeepSortTracker.cpp  DeepSortTrackerParam.cpp  FeatureBaseDetTraits.cpp  KalmanTracker.cpp  OpencvOpticalFlow.cpp  OpticalFlowTracker.cpp  OpticalTrackerParam.cpp  SimpleSortMotionPrediction.cpp  SimpleSortTracker.cpp  SimpleSortTrackerParam.cpp  SortMotionPrediction.cpp  TrackerBase.cpp  TrackerParam.cpp
src/utils/: CosineFeature.cpp  softnms.cpp  utility_functions.cpp
